<resources>
    <string name="app_name">SmartBattery</string>
    <string name="action_settings">Settings</string>
    <string name="charge_status">Plug In Phone</string>
    <string name="voltage_label">Voltage:</string>
    <string name="voltage_default">0</string>
    <string name="temperature_label">Temperature:</string>
    <string name="temperature_default">0</string>
    <string name="timer_default">0</string>
    <string name="SOC_label">State of Charge:</string>
    <string name="SOC_default">0</string>
    <string name="button_label">Save Data</string>
    <string name="button_start_label">Start</string>
    <string name="button_stop_label">Stop</string>
</resources>
